--- a/index.html
+++ b/index.html
@@ -29,26 +29,25 @@
             <address class="contacts">
                 <a href="tel:+78007003030" class="contacts__tel">8 800 700 30 30</a>
                 <span class="contacts__graf">График работы</span>
-                <img src="#" alt="" class="contacts__icon">
+                <!--<img src="#" alt="" class="contacts__icon">
                 <span class="contacts__work-time">пн-вс 09:00-20:00 <br>Обед: 14:00-14:30</span>
+                -->
             </address>
         </header>
         <main class="main">
-            <section class="preview"></section>
-            <h1 class="preview__title">Интеллектуальный <br>
-                вечер для шумной <br>
-                компании
-            </h1>
-            <div class="preview__info">
-                <p >Игры на любой вкус</p>
-            </div>
-            <div class="preview__button">
-                <button class="button">побробнее</button>
-            </div>
+            <section class="preview">
+                <h1 class="preview__title">Интеллектуальный вечер для шумной компании</h1>
+                <div class="preview__info">
+                    <p >Игры на любой вкус</p>
+                </div>
+                <div class="preview__button">
+                    <button class="button">подробнее</button>
+                </div>
+            </section>
             <section class="new-in-the-week">
                 <div class="new-in-the-week__title">
                     <h2 class="new-in-the-week__title-text">Новинки недели</h2>
-                    <img src="#" alt="NEW в снежинке" class="new-in-the-week__icon">
+                    <img src="#" alt="NEW в снежинке" class="new-in-the-week__title-icon">
                 </div>
                 <ul class="new-in-the-week__list">
                     <li class="new-in-the-week__item">
@@ -130,25 +129,25 @@
                 <ul class="past-games__list">
                     <li class="past-games__item">
                         <img src="#" alt="Ликующие люди" class="past-games__img">
-                        <time class="past-games__date">
-                            <span class="past-games__day">1</span>
-                            <span class="past-games__manth">января</span>
-                        </time>
-                        <h3 class="past-games__subtitle">Новогодний квиз</h3>
-                        <p class="past-games__text">Успевайте забронировать даты. Пока еще есть места на <br>
-                                декабрь. Удачи и всех благ!
-                        </p>                        
+                        <div class="past-games__content">
+                            <time class="past-games__date">
+                                <span class="past-games__day">1</span>
+                                <span class="past-games__manth">января</span>
+                            </time>
+                            <h3 class="past-games__subtitle">Новогодний квиз</h3>
+                            <p class="past-games__text">Успевайте забронировать даты. Пока еще есть места на декабрь. Удачи и всех благ!</p>
+                        </div>                       
                     </li>
                     <li class="past-games__item">
                         <img src="#" alt="Команда" class="past-games__img">
-                        <time class="past-games__date">
-                            <span class="past-games__day">8</span>
-                            <span class="past-games__manth">марта</span>
-                        </time>
-                        <h3 class="past-games__subtitle">Весенняя игра</h3>
-                        <p class="past-games__text">Успевайте забронировать даты. Пока еще есть места на <br>
-                            март. Удачи и всех благ!
-                        </p>                        
+                        <div class="past-games__content"></div>
+                            <time class="past-games__date">
+                                <span class="past-games__day">8</span>
+                                <span class="past-games__manth">марта</span>
+                            </time>
+                            <h3 class="past-games__subtitle">Весенняя игра</h3>
+                            <p class="past-games__text">Успевайте забронировать даты. Пока еще есть места на март. Удачи и всех благ!</p>
+                        </div>                        
                     </li>
                 </ul>
                 <div class="paginator">
@@ -184,10 +183,10 @@
                     <img src="#" alt="" class="about-us__bg">
                     <h2 class="about-us__title">О нас</h2>
                     <p class="about-us__text">
-                        Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру <br>
-                        сгенерировать несколько абзацев более менее осмысленного <br>
-                        текста рыбы на русском языке, а начинающему оратору <br>
-                        отточить навык публичных выступлений в домашних <br>
+                        Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру 
+                        сгенерировать несколько абзацев более менее осмысленного 
+                        текста рыбы на русском языке, а начинающему оратору 
+                        отточить навык публичных выступлений в домашних 
                         условиях. 
                     </p>
                     <div class="about-us__button">
@@ -236,7 +235,7 @@
                         <a href="#" class="socials__link">
                             <img src="#" alt="" class="socials__icon">
                         </a>
-                    </li>`
+                    </li>
                 </ul>
             </div>
             <address class="contacts">
