--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
                                 </div>
                             </div>
                             <div class="new-in-the-week__text">
-                                <p>Равным образом постоянное обеспечение <br>
-                                    нашей деятельности позволяет оценить <br>
+                                <p>Равным образом постоянное обеспечение 
+                                    нашей деятельности позволяет оценить 
                                     значение систем массового участия.</p>
                             </div>
                             <div class="new-in-the-week__button">
@@ -89,8 +89,8 @@
                                 </div>
                             </div>
                             <div class="new-in-the-week__text">
-                                <p>Равным образом постоянное обеспечение <br>
-                                    нашей деятельности позволяет оценить <br>
+                                <p>Равным образом постоянное обеспечение 
+                                    нашей деятельности позволяет оценить 
                                     значение систем массового участия.</p>
                             </div>
                             <div class="new-in-the-week__button">
@@ -113,8 +113,8 @@
                                 </div>
                             </div>
                             <div class="new-in-the-week__text">
-                                <p>Равным образом постоянное обеспечение <br>
-                                    нашей деятельности позволяет оценить <br>
+                                <p>Равным образом постоянное обеспечение 
+                                    нашей деятельности позволяет оценить 
                                     значение систем массового участия.</p>
                             </div>
                             <div class="new-in-the-week__button">
@@ -235,8 +235,7 @@
                         <a href="#" class="socials__link">
                             <img src="#" alt="" class="socials__icon">
                         </a>
-                    </li>
-                </ul>
+                    </li></ul>
             </div>
             <address class="contacts">
                 <span class="contacts__free-call">Бесплатный звонок по России</span>
