--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                     </li>
                     <li class="past-games__item">
                         <img src="#" alt="Команда" class="past-games__img">
-                        <div class="past-games__content"></div>
+                        <div class="past-games__content">
                             <time class="past-games__date">
                                 <span class="past-games__day">8</span>
                                 <span class="past-games__manth">марта</span>
@@ -193,8 +193,8 @@
                         <button class="button">подробнее</button>
                     </div>
                 </div>
-            </section>            
-        </main>
+            </section>
+        </main>   
         <footer class="footer">
             <div class="logo">
                 <a href="" class="logo__link">
