--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <section class="new-in-the-week">
                     <div class="new-in-the-week__title">
                         <h2 class="new-in-the-week__title-text">Новинки недели</h2>
-                        <img src="icon\store-new-badges 1.svg" alt="NEW в снежинке" class="new-in-the-week__title-icon">
+                        <img src="icon/store-new-badges 1.svg" alt="NEW в снежинке" class="new-in-the-week__title-icon">
                     </div>
                     <ul class="new-in-the-week__list">
                         <li class="new-in-the-week__item">
