--- a/index.html
+++ b/index.html
@@ -4,11 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,700;1,600&display=swap"
-        rel="stylesheet">
-    <link rel="stylesheet" href="main.css">
+
+    <link rel="stylesheet" href="./css/main.css">
+
     <title>Quiz_box</title>
 </head>
 
@@ -32,16 +30,16 @@
                         </li>
                     </ul>
                 </nav>
-                <address class="contacts">
+                <address class="contacts ">
                     <a href="tel:+78007003030" class="contacts__tel">8 800 700 30 30</a>
                     <span class="contacts__graf">График работы</span>
                     <!--<img src="#" alt="" class="contacts__icon">
-                <span class="contacts__work-time">пн-вс 09:00-20:00 <br>Обед: 14:00-14:30</span>
-                -->
+                    <span class="contacts__work-time">пн-вс 09:00-20:00 <br>Обед: 14:00-14:30</span>
+                    -->
                 </address>
             </header>
-            <main class="main">
-                <section class="preview">
+            <main class="main main__container">
+                <section class="preview preview__container">
                     <h1 class="preview__title">Интеллектуальный вечер для шумной компании</h1>
                     <div class="preview__info">
                         <p>Игры на любой вкус</p>
@@ -133,8 +131,8 @@
                 <section class="past-games">
                     <h2 class="past-games__title">Прошедшие игры</h2>
                     <ul class="past-games__list">
-                        <li class="past-games__item">
-                            <img src="img\kto-gde-quiz.jfif" alt="Ликующие люди" class="past-games__img">
+                        <li class="past-games__item past-games__item-img1">
+                            <!--<img src="img\kto-gde-quiz.jfif" alt="Ликующие люди" class="past-games__img">-->
                             <div class="past-games__content">
                                 <time class="past-games__date">
                                     <span class="past-games__day">1</span>
@@ -145,8 +143,8 @@
                                     декабрь. Удачи и всех благ!</p>
                             </div>
                         </li>
-                        <li class="past-games__item">
-                            <img src="img\team.jfif" alt="Команда" class="past-games__img">
+                        <li class="past-games__item past-games__item-img2">
+                            <!--<img src="img\team.jfif" alt="Команда" class="past-games__img">-->
                             <div class="past-games__content">
                                 <time class="past-games__date">
                                     <span class="past-games__day">8</span>
@@ -186,7 +184,9 @@
                     </div>
                 </section>
                 <section class="about-us">
-                    <img src="img\kviz_pliz.jfif" alt="Люди за столом" class="about-us__img">
+                    <div class="about-us__img">
+                        <!--<img src="img\kviz_pliz.jfif" alt="Люди за столом" class="about-us__img">-->
+                    </div>
                     <div class="about-us__content">
                         <h2 class="about-us__title">О нас</h2>
                         <p class="about-us__text">
@@ -204,6 +204,7 @@
             </main>
             <footer class="footer">
                 <div class="footer-conteiner">
+                    <!--<div class="footer-column-left">-->
                     <div class="logo">
                         <a href="" class="logo__link">Quiz-box</a>
                     </div>
@@ -220,9 +221,11 @@
                             </li>
                         </ul>
                     </nav>
+                    <!--</div>-->
+                    <!--<div class="footer-column-right">-->
                     <div class="socials">
                         <ul class="socials__list">
-                            <li class="socials__item socials__item--icon--telegram">
+                            <li class="socials__item          socials__item--icon--telegram">
                                 <a href="#" class="socials__link">
                                     <!--<img src="img\telegram.png" alt="" class="socials__icon">-->
                                 </a>
@@ -248,6 +251,7 @@
                         <div class="contacts__free-call">Бесплатный звонок по России</div>
                         <a href="tel:+78007003030" class="contacts__tel">8 800 700 30 30</a>
                     </address>
+                    <!--</div>-->
                 </div>
             </footer>
         </div>
