--- a/games.html
+++ b/games.html
@@ -21,10 +21,10 @@
           <nav class="menu">
             <ul class="menu__list">
               <li class="menu__item">
-                <a href="#" class="menu__link">Главная</a>
+                <a href="./index.html" class="menu__link">Главная</a>
               </li>
               <li class="menu__item">
-                <a href="#" class="menu__link">Игры</a>
+                <a href="./games.html" class="menu__link">Игры</a>
               </li>
               <li class="menu__item">
                 <a href="#" class="menu__link">Отзывы</a>
@@ -127,42 +127,42 @@
       <ul class="partners">
         <li class="partners__item">
           <a href="#" class="partners__link">
-            <img src="/img/pobeda.png" alt="pobeda logo">
+            <img src="./img/pobeda.png" alt="pobeda logo">
           </a>
         </li>
         <li class="partners__item">
           <a href="#" class="partners__link">
-            <img src="/img/s7.png" alt="s7 logo">
+            <img src="./img/s7.png" alt="s7 logo">
           </a>
         </li>
         <li class="partners__item">
           <a href="#" class="partners__link">
-            <img src="/img/quizplease.png" alt="quizplease logo">
+            <img src="./img/quizplease.png" alt="quizplease logo">
           </a>
         </li>
         <li class="partners__item">
           <a href="#" class="partners__link">
-            <img src="/img/ligaquiz.png" alt="ligaquiz logo">
+            <img src="./img/ligaquiz.png" alt="ligaquiz logo">
           </a>
         </li>
         <li class="partners__item">
           <a href="#" class="partners__link">
-            <img src="/img/questroom.png" alt="questroom logo">
+            <img src="./img/questroom.png" alt="questroom logo">
           </a>
         </li>
         <li class="partners__item">
           <a href="#" class="partners__link">
-            <img src="/img/pegasus.png" alt="pegasus logo">
+            <img src="./img/pegasus.png" alt="pegasus logo">
           </a>
         </li>
         <li class="partners__item">
           <a href="#" class="partners__link">
-            <img src="/img/airbaltic.png" alt="airbaltic logo">
+            <img src="./img/airbaltic.png" alt="airbaltic logo">
           </a>
         </li>
         <li class="partners__item">
           <a href="#" class="partners__link">
-            <img src="/img/pegas.png" alt="pegas logo">
+            <img src="./img/pegas.png" alt="pegas logo">
           </a>
         </li>
       </ul>
