--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="./css/main.css">
 
     <title>Quiz_box</title>
 </head>
@@ -20,10 +20,10 @@
                 <nav class="menu">
                     <ul class="menu__list">
                         <li class="menu__item">
-                            <a href="#" class="menu__link">Главная</a>
+                            <a href="./index.html" class="menu__link">Главная</a>
                         </li>
                         <li class="menu__item">
-                            <a href="#" class="menu__link">Игры</a>
+                            <a href="./games.html" class="menu__link">Игры</a>
                         </li>
                         <li class="menu__item">
                             <a href="#" class="menu__link">Отзывы</a>
@@ -214,7 +214,7 @@
                                 <a href="#" class="menu__link">Главная</a>
                             </li>
                             <li class="menu__item">
-                                <a href="#" class="menu__link">Игры</a>
+                                <a href="./games.html" class="menu__link">Игры</a>
                             </li>
                             <li class="menu__item">
                                 <a href="#" class="menu__link">Отзывы</a>
