--- a/games.html
+++ b/games.html
@@ -123,49 +123,51 @@
       </div>
     </main>
     <section class="inner-section inner-section-bg-grey">
-      <h2 class="inner-section__title">Партнёры</h2>
-      <ul class="partners">
-        <li class="partners__item">
-          <a href="#" class="partners__link">
-            <img src="./img/pobeda.png" alt="pobeda logo">
-          </a>
-        </li>
-        <li class="partners__item">
-          <a href="#" class="partners__link">
-            <img src="./img/s7.png" alt="s7 logo">
-          </a>
-        </li>
-        <li class="partners__item">
-          <a href="#" class="partners__link">
-            <img src="./img/quizplease.png" alt="quizplease logo">
-          </a>
-        </li>
-        <li class="partners__item">
-          <a href="#" class="partners__link">
-            <img src="./img/ligaquiz.png" alt="ligaquiz logo">
-          </a>
-        </li>
-        <li class="partners__item">
-          <a href="#" class="partners__link">
-            <img src="./img/questroom.png" alt="questroom logo">
-          </a>
-        </li>
-        <li class="partners__item">
-          <a href="#" class="partners__link">
-            <img src="./img/pegasus.png" alt="pegasus logo">
-          </a>
-        </li>
-        <li class="partners__item">
-          <a href="#" class="partners__link">
-            <img src="./img/airbaltic.png" alt="airbaltic logo">
-          </a>
-        </li>
-        <li class="partners__item">
-          <a href="#" class="partners__link">
-            <img src="./img/pegas.png" alt="pegas logo">
-          </a>
-        </li>
-      </ul>
+      <div class="inner-section-wrapper">
+        <h2 class="inner-section__title">Партнёры</h2>
+        <ul class="partners">
+          <li class="partners__item">
+            <a href="#" class="partners__link">
+              <img src="./img/pobeda.png" alt="pobeda logo">
+            </a>
+          </li>
+          <li class="partners__item">
+            <a href="#" class="partners__link">
+              <img src="./img/s7.png" alt="s7 logo">
+            </a>
+          </li>
+          <li class="partners__item">
+            <a href="#" class="partners__link">
+              <img src="./img/quizplease.png" alt="quizplease logo">
+            </a>
+          </li>
+          <li class="partners__item">
+            <a href="#" class="partners__link">
+              <img src="./img/ligaquiz.png" alt="ligaquiz logo">
+            </a>
+          </li>
+          <li class="partners__item">
+            <a href="#" class="partners__link">
+              <img src="./img/questroom.png" alt="questroom logo">
+            </a>
+          </li>
+          <li class="partners__item">
+            <a href="#" class="partners__link">
+              <img src="./img/pegasus.png" alt="pegasus logo">
+            </a>
+          </li>
+          <li class="partners__item">
+            <a href="#" class="partners__link">
+              <img src="./img/airbaltic.png" alt="airbaltic logo">
+            </a>
+          </li>
+          <li class="partners__item">
+            <a href="#" class="partners__link">
+              <img src="./img/pegas.png" alt="pegas logo">
+            </a>
+          </li>
+        </ul>
+      </div>
     </section>
     <footer class="footer footer-games">
       <div class="footer-conteiner">
