--- a/games.html
+++ b/games.html
@@ -16,7 +16,7 @@
       <div class="container top-line__container">
         <header class="header header-top-line">
           <div class="logo">
-            <a href="" class="logo__link">Quiz-box</a>
+            <a href="./index.html" class="logo__link">Quiz-box</a>
           </div>
           <nav class="menu">
             <ul class="menu__list">
@@ -27,26 +27,28 @@
                 <a href="./games.html" class="menu__link">Игры</a>
               </li>
               <li class="menu__item">
-                <a href="#" class="menu__link">Отзывы</a>
+                <a href="./games.html" class="menu__link">Отзывы</a>
               </li>
             </ul>
           </nav>
-          <address class="contacts">
+          <address class="contacts ">
             <a href="tel:+78007003030" class="contacts__tel">8 800 700 30 30</a>
-            <span class="contacts__graf">График работы</span>
-            <!--<img src="#" alt="" class="contacts__icon">
-                    <span class="contacts__work-time">пн-вс 09:00-20:00 <br>Обед: 14:00-14:30</span>
-                    -->
+            <div class="dropdown">
+              <span class="contacts__graf">График работы</span>
+              <div class="dropdown-icon">
+                <span class="contacts__work-time"><b>пн-вс 09:00-20:00</b><br>Обед: 14:00-14:30</span>
+              </div>
+            </div>
           </address>
         </header>
         <h1 class="page-title">Игры</h1>
         <nav class="breadcrumbs">
           <ul class="breadcrumbs__list">
             <li class="breadcrumbs__item">
-              <a href="#" class="breadcrumbs__item-link">Главная</a>
+              <a href="./index.html" class="breadcrumbs__item-link">Главная</a>
             </li>
             <li class="breadcrumbs__item">
-              <a href="#" class="breadcrumbs__link breadcrumbs__link-activ">Услуги</a>
+              <a href="./games.html" class="breadcrumbs__link breadcrumbs__link-activ">Услуги</a>
             </li>
           </ul>
         </nav>
@@ -171,46 +173,37 @@
     </section>
     <footer class="footer footer-games">
       <div class="footer-conteiner">
-        <!--<div class="footer-column-left">-->
+
         <div class="logo">
-          <a href="" class="logo__link">Quiz-box</a>
+          <a href="./index.html" class="logo__link">Quiz-box</a>
         </div>
         <nav class="menu">
           <ul class="menu__list">
             <li class="menu__item">
-              <a href="#" class="menu__link">Главная</a>
+              <a href="./index.html" class="menu__link">Главная</a>
             </li>
             <li class="menu__item">
-              <a href="#" class="menu__link">Игры</a>
+              <a href="./games.html" class="menu__link">Игры</a>
             </li>
             <li class="menu__item">
-              <a href="#" class="menu__link">Отзывы</a>
+              <a href="./reviews.html" class="menu__link">Отзывы</a>
             </li>
           </ul>
         </nav>
-        <!--</div>-->
-        <!--<div class="footer-column-right">-->
+
         <div class="socials">
           <ul class="socials__list">
             <li class="socials__item          socials__item--icon--telegram">
-              <a href="#" class="socials__link">
-                <!--<img src="img\telegram.png" alt="" class="socials__icon">-->
-              </a>
+              <a href="#" class="socials__link"></a>
             </li>
             <li class="socials__item socials__item--icon--vk">
-              <a href="#" class="socials__link">
-                <!--<img src="img\vk.png" alt="" class="socials__icon">-->
-              </a>
+              <a href="#" class="socials__link"></a>
             </li>
             <li class="socials__item socials__item--icon--facebook">
-              <a href="#" class="socials__link">
-                <!--<img src="img\facebook" alt="" class="socials__icon">-->
-              </a>
+              <a href="#" class="socials__link"></a>
             </li>
             <li class="socials__item socials__item--icon--instagram">
-              <a href="#" class="socials__link">
-                <!--<img src="img\instagram" alt="" class="socials__icon">-->
-              </a>
+              <a href="#" class="socials__link"></a>
             </li>
           </ul>
         </div>
@@ -218,7 +211,7 @@
           <div class="contacts__free-call">Бесплатный звонок по России</div>
           <a href="tel:+78007003030" class="contacts__tel">8 800 700 30 30</a>
         </address>
-        <!--</div>-->
+
       </div>
     </footer>
   </div>
