--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="container">
             <header class="header">
                 <div class="logo">
-                    <a href="" class="logo__link">Quiz-box</a>
+                    <a href="./index.html" class="logo__link">Quiz-box</a>
                 </div>
                 <nav class="menu">
                     <ul class="menu__list">
@@ -26,16 +26,18 @@
                             <a href="./games.html" class="menu__link">Игры</a>
                         </li>
                         <li class="menu__item">
-                            <a href="#" class="menu__link">Отзывы</a>
+                            <a href="./reviews.html" class="menu__link">Отзывы</a>
                         </li>
                     </ul>
                 </nav>
                 <address class="contacts ">
                     <a href="tel:+78007003030" class="contacts__tel">8 800 700 30 30</a>
-                    <span class="contacts__graf">График работы</span>
-                    <!--<img src="#" alt="" class="contacts__icon">
-                    <span class="contacts__work-time">пн-вс 09:00-20:00 <br>Обед: 14:00-14:30</span>
-                    -->
+                    <div class="dropdown">
+                        <span class="contacts__graf">График работы</span>
+                        <div class="dropdown-icon">
+                            <span class="contacts__work-time"><b>пн-вс 09:00-20:00</b><br>Обед: 14:00-14:30</span>
+                        </div>
+                    </div>
                 </address>
             </header>
             <main class="main main__container">
@@ -206,18 +208,18 @@
                 <div class="footer-conteiner">
                     <!--<div class="footer-column-left">-->
                     <div class="logo">
-                        <a href="" class="logo__link">Quiz-box</a>
+                        <a href="./index.html" class="logo__link">Quiz-box</a>
                     </div>
                     <nav class="menu">
                         <ul class="menu__list">
                             <li class="menu__item">
-                                <a href="#" class="menu__link">Главная</a>
+                                <a href="./index.html" class="menu__link">Главная</a>
                             </li>
                             <li class="menu__item">
                                 <a href="./games.html" class="menu__link">Игры</a>
                             </li>
                             <li class="menu__item">
-                                <a href="#" class="menu__link">Отзывы</a>
+                                <a href="./reviews.html" class="menu__link">Отзывы</a>
                             </li>
                         </ul>
                     </nav>
