--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <div class="dropdown">
                         <span class="contacts__graf">График работы</span>
                         <div class="dropdown-icon">
-                            <div class="triangle"></div>
+                            <!--<div class="triangle"></div>-->
                             <div class="contacts__work-time">
                                 <p><b>пн-вс 09:00-20:00</b><br>Обед: 14:00-14:30</p>
                             </div>
